<resources>
    <string name="app_name">SplashScreen</string>
    <string name="loading">Loading…</string>
    <string name="textBtn">Click Button</string>
    <string name="text">Click the button please…</string>
    <string name="descText">Text is change on button click…</string>
    <string name="result">This your result: </string>
    <string name="text2">Click for move next activity</string>
    <string name="btn2">Click Intent</string>
    <string name="submit">Submit Data</string>
    <string name="inputText">Input Text</string>
    <string name="descText2">Pass Data between activity using Data</string>
    <string name="list">See List</string>
    <string name="customList">See Custom List</string>
    <string name="descText3">Custom Listview with item click listener</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="showAlertDialog">Show Alert Dialog</string>
    <string name="descText4">Alert Dialog</string>
    <string name="singleAlertDialog">Single Alert Dialog</string>
    <string name="descText5">Single Choice Alert Dialog</string>
    <string name="alertDialog">ShowAlert</string>
    <string name="descText6">Preference Colors</string>
    <string name="descPositive">Your preferred colors…</string>
    <string name="alertDialogCustom">Alert Custom</string>
    <string name="descText7">Alert Dialog with Custom Layout Programmatically</string>
    <string name="enterName"> Enter Name</string>
    <string name="enterEmail"> Enter Email</string>
</resources>