<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="@dimen/default_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn"
        android:text="@string/textBtn"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_default_color_secondary"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/btn2"
        android:text="@string/btn2"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_default_color_secondary"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="8dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:hint="@string/inputText"
            android:id="@+id/addData"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_width="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descText2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_default_color_secondary"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnList"
        android:text="@string/list"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descText2"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_default_color_secondary"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnCustomList"
        android:text="@string/customList"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descText3"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_default_color_secondary"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnShowAlertDialog"
        android:text="@string/showAlertDialog"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descText4"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_default_color_secondary"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnSingleAlertDialog"
        android:text="@string/singleAlertDialog"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descText5"/>

</LinearLayout>